# Kortex

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/adapters/: audit_adapter.py  k8s_adapter.py  llm_adapter.py  simulation_adapter.py  vector_adapter.py
backend/app/domain/: models.py
backend/app/ports/: interfaces.py
backend/app/services/: scan_service.py  workflow_service.py
backend/tests/: conftest.py  test_api.py  test_domain.py
docs/: user_guide.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ActivityLog.tsx  AnalysisDashboard.tsx  ClusterGraph.tsx  ClusterWizard.tsx  FixModal.tsx  ReportsDashboard.tsx  ScanDashboard.tsx  ScanOptionsModal.tsx  ScanProgressMap.tsx  SettingsModal.tsx
frontend/src/services/: api.ts
