[tool.poetry]
name = "kortex-backend"
version = "0.1.0"
description = "Kubernetes Cluster Intelligence Platform - Backend"
authors = ["Kortex Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
kubernetes = "^29.0.0"
langchain = "^0.1.0"
langchain-openai = "^0.0.5"
langchain-community = "^0.0.10"
pydantic = "^2.6.0"
networkx = "^3.2.1"
chromadb = "^0.4.22"
cryptography = "^42.0.0"
celery = "^5.3.6"
redis = "^5.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.26.0"
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
